[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Alejandro Henao <alejandrohenao91@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
transformers = "^4.44.1"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
